@@ -76,7 +76,11 @@ public abstract class ModalRenderNode extends ContainerRenderNode implements Nav
 				controllerHotkeys.put(hotKeyOperation.getControllerButton().getAbsoluteValue(),
 						hotKeyOperation.getActionable().getId());
 			} else {
-				controllerHotkeys.remove(hotKeyOperation.getControllerButton().getAbsoluteValue());
+				if(hotKeyOperation.getControllerButton() == null) {
+					controllerHotkeys.clear();
+				} else {
+					controllerHotkeys.remove(hotKeyOperation.getControllerButton().getAbsoluteValue());
+				}
 			}
 		}
 		while (!keyboardHotKeyOperations.isEmpty()) {
@@ -84,7 +88,11 @@ public abstract class ModalRenderNode extends ContainerRenderNode implements Nav
 			if (hotKeyOperation.isMapOperation()) {
 				keyboardHotkeys.put(hotKeyOperation.getKeycode(), hotKeyOperation.getActionable().getId());
 			} else {
-				keyboardHotkeys.remove(hotKeyOperation.getKeycode());
+				if(hotKeyOperation.getKeycode() == Integer.MAX_VALUE) {
+					keyboardHotkeys.clear();
+				} else {
+					keyboardHotkeys.remove(hotKeyOperation.getKeycode());
+				}
 			}
 		}
 	}
